--- a/energia/energia.html
+++ b/energia/energia.html
@@ -73,7 +73,7 @@
 
     /* Estilos para info-section */
     .info-section {
-      padding: 60px 0;
+      padding: 30px 0;
     }
 
     .info-section .container {
@@ -442,6 +442,18 @@
   }
 }
 
+.imgresultados{
+  width: 320px!important;
+  height: 320px!important;
+}
+/* Estilo do Footer */
+.footer {
+  background-color: #1A1A1A; /* Cor de fundo */
+  color: #EFECE4; /* Cor do texto */
+  font-size: 1rem;
+  padding: 20px;
+}
+
 
   </style>
 </head>
@@ -456,11 +468,11 @@
         <div class="logo">
           <img src="logo-EnergIA.png" alt="Logo EnergIA">
         </div>
-        <!-- Botões -->
+        <!-- Botões 
         <div class="buttons">
           <button class="btn btn-login">Log in</button>
           <button class="btn btn-register">Registrar-se</button>
-        </div>
+        </div>-->
       </div>
 
       <!-- Linha inferior com textos -->
@@ -499,7 +511,7 @@
       </div>
       <!-- Imagem dentro do card -->
       <div class="card-image ms-md-4 mt-4 mt-md-0 d-flex align-items-center ">
-        <img src="EnergIA-fisico.png" alt="Desafios" class="rounded img-fluid" style="max-width: 200px;">
+        <img src="EnergIA-bloco.png" alt="Desafios" class="rounded img-fluid" style="max-width: 200px;">
       </div>
     </div>
   </div>
@@ -629,7 +641,7 @@
         
       </div>
       <div class="image-container">
-        <img src="chat.png" alt="Resultados Esperados">
+        <img src="resultados.png" class="imgresultados" alt="Resultados Esperados">
       </div>
     </div>
   </section>
@@ -649,7 +661,7 @@
       <div class="col-md-12 mb-4">
         <div class="team-card p-4">
           <div class="d-flex align-items-center mb-3">
-            <img src="../images/placeholder" alt="Autor" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
+            <img src="pedro.jpg" alt="Autor" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
             <div>
               <h5 class="team-name">Pedro Thiago Roque</h5>
               <p class="team-role">Autor do Projeto</p>
@@ -666,7 +678,7 @@
       <div class="col-md-4 mb-4">
         <div class="team-card p-4">
           <div class="d-flex align-items-center mb-3">
-            <img src="../images/placeholder" alt="Orientador 1" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
+            <img src="patricia.webp" alt="Orientador 1" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
             <div>
               <h5 class="team-name">Profª Drª Patrícia Jaques Maillard</h5>
               <p class="team-role">Orientadora</p>
@@ -683,7 +695,7 @@
       <div class="col-md-4 mb-4">
         <div class="team-card p-4">
           <div class="d-flex align-items-center mb-3">
-            <img src="../images/placeholder" alt="Orientador 2" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
+            <img src="tatiana.jpg" alt="Orientador 2" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
             <div>
               <h5 class="team-name">Profª Drª Tatiana Aires Tavares</h5>
               <p class="team-role">Co-orientadora</p>
@@ -700,7 +712,7 @@
       <div class="col-md-4 mb-4">
         <div class="team-card p-4">
           <div class="d-flex align-items-center mb-3">
-            <img src="../images/placeholder" alt="Orientador 3" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
+            <img src="antonio.jpg" alt="Orientador 3" class="rounded-circle mr-3" style="width: 60px; height: 60px;">
             <div>
               <h5 class="team-name">Prof. Dr. Antônio César Silveira Baptista da Silva</h5>
               <p class="team-role">Co-orientador</p>
@@ -715,6 +727,13 @@
     </div>
   </div>
 </section>
+
+<!-- Footer -->
+<footer class="footer text-white text-center py-3">
+  Desenvolvido por <a href="https://github.com/PedroThiagoRoque" target="_blank" class="text-white">
+    Pedro Thiago Roque
+  </a> (2024)
+</footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
